fixed spacing issue

--- a/src/styles/Results/Notification.css
+++ b/src/styles/Results/Notification.css
@@ -4,7 +4,7 @@
 
 .notiContainer {
   width: 75%;
-  margin-left: auto;
+  margin: auto;
 }
 
 .json {
